--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -300,6 +300,13 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libpulse-dev
         if: ${{ matrix.platform == 'linux' }}
 
+      - name: Install `${{ matrix.platform }}` platform dependencies
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+        if: ${{ matrix.platform == 'android'
+          || matrix.platform == 'ios' }}
+
       - uses: actions/download-artifact@v4
         with:
           name: build-rust-${{ matrix.platform }}
