--- a/android/build.gradle
+++ b/android/build.gradle
@@ -56,9 +56,9 @@ android {
     }
 
     dependencies {
-        def webrtc_branch = "$System.env.WEBRTC_BRANCH"
+        def webrtc_branch = System.getenv('WEBRTC_BRANCH')
 
-        if (webrtc_branch == "") {
+        if (webrtc_branch == null) {
             implementation "com.github.instrumentisto:libwebrtc-bin:138.0.7204.92@aar"
         } else {
             implementation(name: "libwebrtc-bin-${webrtc_branch}", ext: 'aar')
