--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -315,7 +315,7 @@ jobs:
           target: google_apis
           arch: x86_64
           profile: Nexus 6
-          script: make flutter.test.mobile
+          script: make flutter.test.mobile platform=${{ matrix.platform }}
         if: ${{ matrix.platform == 'android' }}
 
       - name: Add TCC permissions on macOS
@@ -360,7 +360,8 @@ jobs:
           os: iOS
         if: ${{ matrix.platform == 'ios' }}
       - name: Test on `${{ matrix.platform }}` platform with simulator
-        run: make flutter.test.mobile device=${{ steps.simulator.outputs.udid }}
+        run: make flutter.test.mobile platform=${{ matrix.platform }}
+                                      device=${{ steps.simulator.outputs.udid }}
                                       debug=yes
         if: ${{ matrix.platform == 'ios' }}
 
