Install cargo-expand in codegen CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,8 @@ jobs:
         with:
           toolchain: stable
 
+      - run: cargo install cargo-expand
+
       - run: make cargo.gen
 
       - run: make flutter.fmt
